# BuilderSync

./: CMakeLists.txt  about.md  changelog.md  mod.json  support.md
cmake/: CPM.cmake
server/: package-lock.json  package.json  server.js
src/: CollabUi.cpp  CollabUi.hpp  CursorOverlay.cpp  CursorOverlay.hpp  EditorHooks.cpp  Session.cpp  Session.hpp  main.cpp
